--- a/new/src/index.css
+++ b/new/src/index.css
@@ -5,7 +5,7 @@ border-radius: 100px;
 }
 .overf{
   overflow-y: scroll;
-  height: 450px;
+  height: 280px;
 }
 .overf:hover{
   
@@ -50,6 +50,11 @@ footer ul li a{
     border:3px solid rgba(0, 0, 0,0.3);
     width: 100%;
   }
+}
+.showedPass{
+  position:relative;
+  left: 13em;
+  /* margin-left: 10em; */
 }
 .ifomo:focus{
   outline: none;
@@ -355,6 +360,19 @@ border-width: 2px;
   font-size: 16px;
   
 }
+.fit-content{
+  width: fit-content;
+}
+.showedPass{
+  position: relative;
+  border: none;
+  left: 15em;
+  bottom:2.7em;
+  width: 50px;
+  background:none;
+  color:gray;
+  font-size: 16px;
+}
 .profiles-2{
   display:flex;
   flex-direction:column;
@@ -385,4 +403,40 @@ button.hidden {
 }
 .showP-3{
   top:1.1em;
+}
+@media(max-width:1201px ) and (min-width:992px) {
+  .showedPass{
+    position: relative;
+    left: 13em;
+  }
+}
+
+@media(max-width:573px) {
+  .showedPass{
+    position: relative;
+    left: 12em;
+  }
+}
+@media(max-width:505px) {
+  .showedPass{
+    position: relative;
+    left: 10em;
+  }
+}
+@media(max-width:410px) {
+  .showedPass{
+    position: relative;
+    left: 8em;
+  }
+}
+@media(max-width:350px) {
+  .showedPass{
+    position: relative;
+    left: 7em;
+  }
+}
+@media(max-width:315px) {
+  .showedPass{
+    display: none;
+  }
 }
